fixed z-indexes less than 10

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -47,7 +47,7 @@
   display: block;
   height: 100%;
   left: 22%;
-  z-index: 11;
+  z-index: 9;
 
   .banner-clothes-container {
     position: relative;
@@ -113,7 +113,7 @@
   width: 25%;
   right: -5%;
   top: 17%;
-  z-index: 10;
+  z-index: 8;
   transform: scale(0);
   animation: scale 0.5s ease 2.3s forwards;
 }
